# task-master

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.sh  pyproject.toml  requirements.txt
app/: app.py  test.db
app/static/css/: main.css
app/templates/: base.html  index.html  update.html
