[tool.poetry]
name = "flask_todo"
version = "0.1.0"
description = ""
authors = ["Luke Anderson <landerson61@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = "^21.7b0"
pytest = "^6.2.4"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
